<resources>
    <string name="app_name">BitWatcher</string>
    <string name="title_home">Home</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_trade">Trade</string>
    <string name="btc_code">BTC</string>
    <string name="bch_code">BCH</string>
    <string name="eth_code">ETH</string>
    <string name="xrp_code">XRP</string>
    <string name="iota_code">IOTA</string>
    <string name="usd_code">USD</string>
    <string name="eur_code">EUR</string>
    <string name="gbp_code">GBP</string>
    <string name="label_account_type">Type</string>
    <string name="label_account_name">Name</string>
    <string name="label_account_balance">Balance</string>
    <string name="label_account_currency">Currency</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="title_select_type">Select Type</string>
    <string name="title_select_currency">Select currency</string>
    <string name="title_select_account">Select account</string>
    <string name="title_select_market">Select market</string>
    <string name="done">Done</string>
    <string name="dash">-</string>
    <string name="contentdesc_delete_balance">Delete balance</string>
    <string name="editaccount_header_balances">Balances</string>
    <string name="contentdesc_add_balance">Add balance</string>
    <string name="contentdesc_options">Options</string>
    <string name="title_ghost_total">Ghost total</string>
    <string name="title_real_total">Real total</string>
    <string name="manu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="header_accounts">Accounts</string>
    <string name="title_calculator">Calculator</string>
    <string name="fee_label">Fee:</string>
    <string name="title_filter">Filter</string>
    <string name="cd_clear_filter">Clear</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="header_filter_account">Account</string>
    <string name="header_filter_transaction_type">Transaction Type</string>
    <string name="header_filter_market_currency">Currency / Market</string>
    <string name="slash">/</string>
    <string name="cd_apply_filter">Apply filter</string>
    <string name="cd_save_filter">Save filter</string>
    <string name="cd_load_saved_filter">Load saved filter</string>
    <string name="title_select_filter">Select filter</string>
    <string name="cd_delete_filter">Delete filter</string>
    <string name="hint_min_amount">Min Amount</string>
    <string name="hint_max_amount">Max amount</string>
    <string name="header_filter_date">Date</string>
    <string name="header_filter_amount">Amount</string>
    <string name="star">*</string>
    <string name="ok">OK</string>
    <string name="dialog_title_filter_name">Enter filter name</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_rate">Rate</string>
    <string name="cd_link_to_ticker_price">Link to ticker price</string>
    <string name="title_select_color">Select colour</string>
    <string name="cd_swap_conversion">Swap conversion</string>
    <string name="trade_select_account">Select Account</string>
    <string name="trade_select_market">Select market</string>
    <string name="price">Price</string>
    <string name="error_load_failed">Load failed: %1$s</string>
    <string name="tab_title_open_trades">Open</string>
    <string name="message_order_placed">%1$s order placed for %2$s</string>
    <string name="currency_format">%1$s %2$s</string>
    <string name="button_delete_trades">Delete trades</string>
</resources>
