<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
>
    <TextView
        android:id="@+id/home_accounts_title"
        style="@style/SectionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_accounts"
    />

    <ImageButton
        android:id="@+id/home_accounts_real_visible_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_button_height"
        android:layout_toLeftOf="@id/home_accounts_currency_button"
        android:layout_toStartOf="@id/home_accounts_currency_button"
        android:contentDescription="@string/contentdesc_add_balance"
        android:src="@drawable/ic_visibility_black_24dp"
        tools:ignore="RtlHardcoded"
    />

    <Button
        android:id="@+id/home_accounts_currency_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_button_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/contentdesc_add_balance"
        android:text="@string/gbp_code"
        tools:ignore="RtlHardcoded"
    />

    <FrameLayout
        android:id="@+id/home_accounts_real_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_accounts_title"
    >
        <TextView
            android:id="@+id/home_accounts_real_title"
            style="@style/TotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/title_real_total"
            android:textColor="@color/colorRealAcct"
        />
        <TextView
            android:id="@+id/home_accounts_real_total"
            style="@style/Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/dash"
            android:textColor="@color/colorRealAcct"
            tools:text="1000 GBP"
        />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/home_accounts_ghost_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_accounts_real_container"
    >
        <TextView
            android:id="@+id/home_accounts_ghost_title"
            style="@style/TotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/title_ghost_total"
            android:textColor="@color/colorGhostAcct"
        />

        <TextView
            android:id="@+id/home_accounts_ghost_total"
            style="@style/Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/dash"
            android:textColor="@color/colorGhostAcct"
            tools:text="2000 GBP"
        />
    </FrameLayout>

    <View
        android:id="@+id/home_accounts_list_divider"
        style="@style/DividerHorizontal"
        android:layout_below="@id/home_accounts_ghost_container"
        android:layout_marginTop="8dp"
    />

    <ScrollView
        android:id="@+id/home_accounts_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_accounts_list_divider"
    >
        <LinearLayout
            android:id="@+id/home_accounts_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        />

    </ScrollView>

</RelativeLayout>