<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
>
    <TextView
        android:id="@+id/calc_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@color/colorTotal"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/calc_amount_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_amount_background"
        app:layout_constraintEnd_toStartOf="@id/calc_amount_currency_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_result_text"
    >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/calc_amount_edit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hint_amount"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/calc_amount_width"
            android:padding="4dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="24sp"
        />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/calc_amount_currency_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/calc_amount_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/calc_amount_edit"
        app:layout_constraintTop_toTopOf="@+id/calc_amount_edit"
        tools:text="@string/btc_code"
    />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/calc_rate_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_amount_background"
        app:layout_constraintEnd_toStartOf="@+id/calc_to_currency_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_amount_edit">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/calc_rate_edit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:background="@null"
            android:hint="@string/hint_rate"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="numberDecimal"
            android:minWidth="@dimen/calc_rate_width"
            android:padding="4dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="18sp"
        />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/calc_to_currency_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/calc_rate_edit"
        app:layout_constraintEnd_toStartOf="@+id/swap_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/calc_rate_edit"
        app:layout_constraintTop_toTopOf="@id/calc_rate_edit"
        tools:text="@string/gbp_code"
    />

    <ImageButton
        android:id="@+id/swap_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_swap_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/calc_rate_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/calc_to_currency_button"
        app:layout_constraintTop_toTopOf="@id/calc_rate_edit"
        android:contentDescription="@string/cd_swap_conversion"
    />

    <ImageView
        android:id="@+id/calc_to_link_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_link_to_ticker_price"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:src="@drawable/ic_link_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/calc_rate_edit"
        app:layout_constraintEnd_toEndOf="@id/calc_rate_edit"
        app:layout_constraintTop_toTopOf="@id/calc_rate_edit"
    />

</android.support.constraint.ConstraintLayout>