<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/balance_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/currency_edit_button"
        android:layout_toStartOf="@id/currency_edit_button"
        tools:ignore="RtlHardcoded">

        <!-- java.lang.NullPointerException: Attempt to invoke virtual method 'void android.view.View.getBoundsOnScreen(android.graphics.Rect)' on a null object reference at android.app.assist.AssistStructure$WindowNode.<init>-->
        <!-- https://stackoverflow.com/questions/45898228/android-attempt-to-invoke-virtual-method-void-android-view-view-getboundsonsc -->
        <!-- solution : android:importantForAutofill="noExcludeDescendants"-->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/balance_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_account_balance"
            android:inputType="numberDecimal"
            android:importantForAutofill="noExcludeDescendants"
        />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/currency_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dash"
        android:layout_toLeftOf="@id/balance_delete_button"
        android:layout_toStartOf="@id/balance_delete_button"
        tools:ignore="RtlHardcoded"/>

    <ImageButton
        android:id="@+id/balance_delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_delete_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/contentdesc_delete_balance"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/balance_error_text"
        android:layout_width="match_parent"
        android:layout_height="18sp"
        style="@style/ValidatonError"
        android:layout_below="@id/balance_edit_layout"
    />
</merge>